# DCGAN

./: CMakeLists.txt  main.cpp
include/dcgan/: DCGAN.h  NatureDataset.h  config.h  utils.h
src/: DCGAN.cpp  NatureDataset.cpp  utils.cpp
